--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 .task-input {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .new-task-wrapper {
@@ -136,7 +136,7 @@
 }
 
 .list-item >    .input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 .btn.delete-btn .img {
@@ -151,18 +151,18 @@
 
 /* Completed */
 .task-list#completed-tasks .label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-list .list-item .input[type=text] {
-  display: none
+  display: none;
 }
 
 .task-list .list-item.edit-mode .input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .task-list .list-item.edit-mode .label {
