--- a/style.css
+++ b/style.css
@@ -5,24 +5,24 @@
   font-family: Lato, sans-serif;
 }
 
-.info-block {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.info-block .img {
+.header__img {
   width: 100%;
 }
 
-.info-block .info-link {
+.header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
 
-  .info-block {
+  .header {
     text-align: center;
   }
 
@@ -34,22 +34,24 @@
   margin: 0 auto 0;
 }
 
-.task-input {
+.new-task__input,
+.task__input,
+.task__label{
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
 
-.new-task-wrapper {
+.new-task__wrapper {
   display: flex;
 }
 
-.task-list {
+.list {
   margin: 0;
   padding: 0px;
 }
 
-.list-item,
+.list__item,
 .title {
   list-style: none;
 }
@@ -75,7 +77,7 @@
 
 /* Heading */
 .title,
-.label[for="new-task"] {
+.new-task__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +87,8 @@
   text-transform: uppercase;
 }
 
-.input[type="text"] {
+.new-task__input,
+.task__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,22 +101,23 @@
   color: #888;
 }
 
-.input[type="text"]:focus {
+.new-task__input:focus,
+.task__input:focus {
   color: #333;
 }
 
 /* New Task */
-.label[for="new-task"] {
+.new-task__label {
   display: block;
   margin: 0 0 20px;
 }
 
-.input#new-task {
+.new-task__input {
   width: 318px;
 }
 
 /* Task list */
-.list-item {
+.task {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -123,51 +127,51 @@
   align-items: center;
 }
 
-.list-item > * {
+.task > .input {
   vertical-align: middle;
 }
 
-.list-item > .input[type="checkbox"] {
+.task__check {
   margin: 0 10px;
 }
 
-.list-item > .label {
+.task__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-.list-item >    .input[type="text"] {
+.task__input {
   width: 226px;
 }
 
-.btn.delete-btn .img {
+.btn__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.btn.delete-btn .img:hover {
+.btn__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-.task-list#completed-tasks .label {
+.list_completed .task__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.task-list .list-item .input[type=text] {
+.task__input {
   display: none;
 }
 
-.task-list .list-item.edit-mode .input[type=text] {
+.task_edit .task__input {
   display: inline-block;
   width: 224px;
 }
 
-.task-list .list-item.edit-mode .label {
+.task_edit .task__label {
   display: none;
 }
